--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>NoCodePay – Sign Up</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+<html>
+<head><title>Sign Up</title></head>
 <body>
-  <h2>Create Your NoCodePay Account</h2>
-  <form action="/signup" method="post">
-    <label>Email:</label><br>
-    <input type="email" name="email" required><br><br>
-
-    <label>Password:</label><br>
-    <input type="password" name="password" required><br><br>
-
-    <button type="submit">Sign Up</button>
+  <h2>Sign Up</h2>
+  <form method="post">
+    Email: <input type="email" name="email" required><br><br>
+    Password: <input type="password" name="password" required><br><br>
+    <button type="submit">Create Account</button>
   </form>
-  <p>Already have an account? <a href="/login">Log in here</a>.</p>
+  <a href="/login">Already have an account? Log in.</a>
 </body>
 </html>
