--- a/templates/login.html
+++ b/templates/login.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>NoCodePay – Login</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
+<html>
+<head><title>Login</title></head>
 <body>
-  <h2>Login to NoCodePay</h2>
-  <form action="/login" method="post">
-    <label>Email:</label><br>
-    <input type="email" name="email" required><br><br>
-
-    <label>Password:</label><br>
-    <input type="password" name="password" required><br><br>
-
+  <h2>Login</h2>
+  <form method="post">
+    Email: <input type="email" name="email" required><br><br>
+    Password: <input type="password" name="password" required><br><br>
     <button type="submit">Log In</button>
   </form>
-  <p>Don't have an account? <a href="/signup">Sign up here</a>.</p>
+  <a href="/signup">Don't have an account? Sign up.</a>
 </body>
 </html>
