--- a/templates/login.html
+++ b/templates/login.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
-<html>
-<head><title>Login</title></head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Login - NoCodePay</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+</head>
 <body>
-  <h2>Login</h2>
-  <form method="post">
-    Email: <input type="email" name="email" required><br><br>
-    Password: <input type="password" name="password" required><br><br>
-    <button type="submit">Log In</button>
-  </form>
-  <a href="/signup">Don't have an account? Sign up.</a>
+    <header>
+        <nav class="nav">
+            <a href="/">Home</a>
+            <a href="/signup">Sign Up</a>
+        </nav>
+    </header>
+
+    <section class="auth-box">
+        <h1>Login</h1>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <ul class="flash">
+                    {% for msg in messages %}
+                        <li>{{ msg }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
+
+        <form method="POST">
+            <input type="email" name="email" placeholder="Email" required><br>
+            <input type="password" name="password" placeholder="Password" required><br>
+            <button type="submit" class="btn-primary">Login</button>
+        </form>
+    </section>
 </body>
 </html>
